public/scss/style.scss
@import 'include-media';
$breakpoints: (phone: 320px, tablet: 800px, desktop: 1024px);

$primary-color: #333;

// Breakpoint between mobile and desktop layout
$break-small: 480px;
$break-medium: 600px;

html, body {
	height: 100%;
}

.uk-button {
	border-radius: 2px;
}

#root {
	// position: absolute;
	width: 100%;
	// left: 0px;
	// right: 0px;
	display: flex;
	flex-direction: row;
	min-height: 100%;
	@include media("<=tablet") {
		flex-direction: column;
	}
	color: $primary-color;
	justify-content: center;
}

#left-sidebar {
	flex: 0 0 auto;
	padding: 10px;

	@include media(">tablet") {
		width: 250px;
		box-shadow: rgba(0,0,0,0.1) 0px 0px 10px 0px;

		.sidebar-fixed-content {
			width: 250px - 10px/2;
			position: fixed;
			top: 0px;
			bottom: 0px;
		}
	}

	@include media("<=tablet") {

		.sidebar-fixed-content {
			width: 100%;
			text-align: center;

			img {
				width: 50%;
				max-width: 250px;
			}
		}
	}

	// Required for the delete button to be placed on the same row as the category
	li a {
		display: inline-block;
	}

	.uk-nav-default {
		margin-top: 20px;
	}

	.sidebar-buy-btn {
		margin-top: 40px;
		width: 100%;
		opacity: 1;
		transition: opacity 200ms;

		a {
			color: #FFF;
		}
	}

	.sidebar-buy-btn.cart-empty {
		opacity: 0.5;
	}
}

.product.active {
	background: #bfddfc;
}

.product-list {
	list-style: none;
	padding-left: 10px;

	h3 {
		margin-bottom: 0px;
		margin-top: 20px;
	}
}

.product-container-list {
	list-style: none;
	display: flex;
	flex-wrap: wrap;
	padding: 0;
	margin: 0;
}

.layout-grid {
	.product-container {
		width: 230px;
		margin: 10px;
		flex-direction: column;
	}

	.product-image-container {
		width: 100%;
		height: 230px;
	}

	.product {
		flex: 1 0 auto;
		.product-input {
			flex: 0 0 auto;
		}
	}
}

.layout-list {
	.product-image-container {
		width: 50px;
		height: auto;
		img {
			top:0;
		}
	}
	.product {
		margin-left: 6px;
	}
}

.layout-table {
	.product-image-container {
		width: 0;
		height: 0;
		visibility: hidden;
	}
	.product {
		flex-direction: row;
		.product-line{
			width: auto;
		}
		.product-input {
			flex: 0 0 auto;
			margin-left: 6px;
		}
	}
}

.product-container {
	width: 100%;
	margin: 0;
	display: flex;
	flex-direction: row;
	align-items: stretch;
}

.product-image-container {
	display: inline-block;
	position: relative;
	width: 100%;
	height: 240px;

	img {
		display: block;
		margin: auto;
		max-height: 100%;
		position: absolute;
		bottom: 0;
		left: 0;
		right: 0;
	}
}

.product {
	font-size: 11pt;
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	width: 100%;
	padding: 0;
	margin-top: 2px;
	margin-bottom: 2px;
	overflow: hidden;

	@include media("<=tablet") {
		border-bottom: 1px solid #676768;
	}

	.uk-button {
		flex: 0 1 50px;
		color: #fff;
		margin: 0;
		text-transform: none;
		min-width: 0px;
	}

	@include media("<=tablet") {
		.number-add {
			display: none;
		}
	}

	.product-line{
		display: flex;
		align-content: stretch;
		flex: 1 0 auto;
		width: 100%;
		padding: 0;
		margin: 0;
	}

	.product-title {
		flex: 1 1 auto;
		color: #333;
		overflow: hidden;
		line-height: 1.5em;
		max-height: 3em;
	}

	input {
		flex: 1 1 auto;
		text-transform: none;
		border-radius: 2px 0px 0px 2px;
	}

	.product-price {
		flex: 0 0 auto;
		white-space: pre;
		padding-left: 10px;
	}
	.product-amount {
		width: 45px;
		border-left: 1px solid #EEE;
		border-top: 1px solid #EEE;
		border-bottom: 1px solid #EEE;
		padding-right: 6px;

		::-webkit-outer-spin-button, ::-webkit-inner-spin-button {
			-webkit-appearance: none;
			margin: 0;
		}

		-moz-appearance: textfield;
		text-align: right;
		font-size: 10pt;
	}

	.product-unit {
		border-top: 1px solid #EEE;
		border-right: 1px solid #EEE;
		border-bottom: 1px solid #EEE;
		width: 40px;
		padding-top: 3px;
		text-align: center;
		background: #EEE;
		font-weight: bold;
		color: #666;
		margin-right: 5px;
		border-radius: 0px 2px 2px 0px;
	}
	.product-edit {
		margin-left: 4px;
		margin-right: 4px;
	}
	.product-delete {
		margin-left: 4px;
		margin-right: 4px;
	}
	.number-add {
		text-align: center;
		padding: 0px;
		min-width: 40px;
	}
}

.product-search-bar {
	display: flex;
	flex-wrap: wrap;
	width: 100%;

	.product-search {
		flex: 1 0 auto;
		margin-right: 10px;
	}

	.toggle-product-images {
		display: inline-flex;
		height: 100%;
		min-height: 35px;
		margin-left: 10px;
		padding:0;
		flex: 0 0 auto;

		.uk-icon-button{
			border-radius: 0;
		}
		.uk-icon-button:first-child{
			border-radius: 10px 0 0 10px;
		}
		.uk-icon-button:last-child{
			border-radius: 0 10px 10px 0;
		}
		.layout-button {
			width: 50px;
			border: 1px solid #AAA;
		}
		.selected {
			background: #CCC;
		}
	}
}

#edit.active {
	opacity: 1;
	visibility: visible;
}

#edit {
	position: fixed;
	right: 10px;
	width: 100px;
	height: 50px;
	top: 10px;
	border: 1px solid #AAA;
	border-radius: 10px;
	opacity: 0;
	transition: opacity 500ms;
	transition: background 500ms;
	visibility: hidden;

	span {
		margin-right: 8px;
	}
}

#edit.edit-mode {
	background: #f0506e;
	color: #FFF;
	border: 1px solid #962d41;
}

.edit.active {
	opacity: 1;
	visibility: visible;
	display: inline-block;
}
.edit {
	opacity: 0;
	// display: inline-block;
	// visibility: hidden;
	display: none;
	transition: opacity 500ms;
}

.edit-invisible.active {
	width: 0px;
	flex-basis: 0px;
	min-width: 0px;
	margin-left: 0px;
	margin-right: 0px;
	border: none;
	opacity: 0;
	visibility: hidden;
}

.edit-display {
	opacity: 1;
	visibility: visible;
}

.edit-display:not(.active) {
	opacity: 0;
	width: 0px;
	flex-basis: 0px;
	padding-left: 0px;
	padding-right: 0px;
	margin-left: 0px;
	margin-right: 0px;
	visibility: hidden;
}

.product:hover .edit-display.active {
	opacity: 1.0;
	visibility: visible;
}

.product-add {
	margin-left: 24px;
}

.category-add {
}

.category-edit-box {
	position: absolute;
	right: 0px;
	display: inline-block;

	.category-delete, .category-edit {
		margin: 2px;
		line-height: 12px;
		height: 28px;
	}
}
/* ... */

